<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="version">v1.3.20</string>
   	<string name="versionButton">Check for Update</string>
    <string name="app_name">Optics Status Board</string>
    <string name="appAuthor">Myles Clark</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="statusButton">Toggle Status Button</string>
    <string name="conf">Conference</string>
    <string name="lunch">Lunch</string>
    <string name="sick">Sick</string>
    <string name="vac">Vacation</string>
    <string name="personStatus">Persons Status</string>
    <string name="sortModeTitle">Sort Mode</string>
    <string name="widgetUpdateInterval">Widget Update Interval</string>
    <string name="setMessage">Set personal message</string>
    <string name="setBackMessage">Set Back</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setStatusOption">Set Status</string>
    <string name="setSignOutTime">Set Signout Reminder</string>
    <string name="notificationsOnOff">Enable Notifications</string>
    <string name="signOutTime">Set Signout Notification Time</string>
    <string name="statusOption">Set Status</string>
    <string name="signoutNotification">Optics Signout Notification</string>
    <string name="vibrateEnable">Enable Vibration Alert</string>
    <string name="locationEnable">Location based sign in/out</string>
    <string name="inCounter">Counter</string>
    <string name="newMessage">New Message</string>
    <string name="websiteLink">Link to Website</string>
    <string name="crashTickerText">An error occurred in Optics Status Board app.</string>
    <string name="crashTitle">Optics Status Board has crashed##8230</string>
    <string name="crashText">Tap here to email the crash report.</string>
    <string name="crashDialogTitle">Please give a brief explanation as to what you were doing.</string>
    <string name="crashDialogComment">Type comment here.</string>

</resources>