<menu xmlns:android="http://schemas.android.com/apk/res/android" >
            
    <item
        android:id="@+id/setStatusOption"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/setStatusOption" />
    
    <item
        android:id="@+id/setSignOutTime"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/setSignOutTime" android:enabled="false" android:visible="true"/>
    
    <item android:id="@+id/websiteLink" android:orderInCategory="98" android:title="@string/websiteLink" android:showAsAction="never"></item><item
        android:id="@+id/versionButton"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/versionButton" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    

</menu>