<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/inButtonW"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:background="@null"
        android:contentDescription="@string/in"
        android:scaleType="fitCenter"
        android:src="@drawable/in"
        android:text="@string/in" />
    
    <ImageButton
        android:id="@+id/outButtonW"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:background="@null"
        android:contentDescription="@string/out"
        android:scaleType="fitCenter"
        android:src="@drawable/out"
        android:text="@string/out"
        android:visibility="gone" />
    
    <ImageButton
        android:id="@+id/confButtonW"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:background="@null"
        android:contentDescription="@string/conf"
        android:scaleType="fitCenter"
        android:src="@drawable/meeting"
        android:text="@string/conf"
        android:visibility="gone" />

	<ImageButton
	    android:id="@+id/lunchButtonW"
	    android:layout_width="50dp"
	    android:layout_height="50dp"
	    android:layout_margin="2dp"
	    android:background="@null"
	    android:contentDescription="@string/lunch"
	    android:scaleType="fitCenter"
	    android:src="@drawable/lunch"
	    android:text="@string/lunch"
	    android:visibility="gone" />

	<ImageButton
	    android:id="@+id/sickButtonW"
	    android:layout_width="50dp"
	    android:layout_height="50dp"
	    android:layout_margin="2dp"
	    android:background="@null"
	    android:contentDescription="@string/sick"
	    android:scaleType="fitCenter"
	    android:src="@drawable/sick"
	    android:text="@string/sick"
	    android:visibility="gone" />

	<ImageButton
	    android:id="@+id/vacButtonW"
	    android:layout_width="50dp"
	    android:layout_height="50dp"
	    android:layout_margin="2dp"
	    android:background="@null"
	    android:contentDescription="@string/vac"
	    android:scaleType="fitCenter"
	    android:src="@drawable/vacation"
	    android:text="@string/vac"
	    android:visibility="gone" />

</LinearLayout>