<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
        android:key="userdata"
        android:title="User Information" >
        <EditTextPreference
            android:key="username"
            android:title="Username"
            android:defaultValue=""
            android:summary="Set your username here" />
        <EditTextPreference
            android:key="password"
            android:title="Password"
            android:defaultValue=""
            android:inputType="textPassword"
            android:summary="Set your password here" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showName"
            android:summaryOn="You will be included in the list"
            android:summaryOff="You will not be included in the list"
            android:title="Include me in the list" />
	</PreferenceCategory>
    
    <PreferenceCategory
        android:key="notificationSettings"
        android:title="Notification Settings" >

        <CheckBoxPreference 
            android:title="@string/notificationsOnOff"
            android:enabled="true"
            android:defaultValue="false"
            android:key="notificationEnabled"
            android:summaryOn="Notifications will be displayed"
            android:summaryOff="Notifications will not be displayed"
            android:selectable="true" />
        
        <CheckBoxPreference
            android:title="@string/vibrateEnable"
            android:dependency="notificationEnabled"
            android:enabled="true"
            android:defaultValue="true"
            android:key="canVibrate"
            android:summaryOn="Vibration on notification is enabled"
            android:summaryOff="Vibration on notification is disabled"
            android:selectable="true" />
        
    </PreferenceCategory>
            
    
    <PreferenceCategory
        android:key="viewSettings"
        android:title="View Settings" >
        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/sortModeTitle"
            android:enabled="true"
            android:entries="@array/sortModeTypes"
            android:entryValues="@array/sortModeValues"
            android:key="sortMode"
            android:selectable="true"
            android:title="Sorting Mode"
            android:summary="Select the sorting method for the list" />

    </PreferenceCategory>
    
    <PreferenceCategory android:key="aboutPref" android:title="About">
        <Preference android:key="versionDisplay" android:title="Current Application Version" android:summary="@string/version" android:selectable="false" android:enabled="true"/>
        <Preference android:key="authorDisplay" android:title="App Author" android:summary="@string/appAuthor" android:enabled="true" android:selectable="false"/>
    </PreferenceCategory>

</PreferenceScreen>