<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:animateLayoutChanges="true" >
    
    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true" >

        <RelativeLayout
            android:id="@+id/statusButtons"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:animateLayoutChanges="true" >

            <ImageButton
                android:id="@+id/statusButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="2dp"
                android:background="@null"
                android:contentDescription="@string/in"
                android:scaleType="fitCenter"
                android:src="@drawable/in"
                android:text="@string/statusButton" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/refresh_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="2dp"
            android:background="@null"
            android:contentDescription="@string/refresh"
            android:scaleType="fitCenter"
            android:src="@drawable/refresh"
            android:text="@string/refresh" />
        
        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="2dp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/setMessage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_margin="2dp"
            android:layout_toRightOf="@+id/statusButtons"
            android:background="@null"
            android:contentDescription="@string/setMessage"
            android:scaleType="fitCenter"
            android:src="@drawable/set_message"
            android:text="@string/setMessage" />

        <Button
            android:id="@+id/setBackMessage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_margin="2dp"
            android:layout_toRightOf="@+id/setMessage"
            android:text="@string/setBackMessage" />

        <ImageView
            android:id="@+id/newMessageImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/refresh_button"
            android:contentDescription="@string/newMessage"
            android:src="@drawable/new_message"
            android:visibility="invisible" />

    </RelativeLayout>
        
    <ListView
        android:id="@+id/peopleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/topBar"
        android:animateLayoutChanges="false"
        android:divider="#00000000"
        android:dividerHeight="1dp"
        android:layoutAnimation="@anim/list_view_animation"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" />

</RelativeLayout>

